<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Yamp</string>
    <string name="app_name_expanded_typed">Yet Another Music Player.</string>
    <string name="intro_google_assistant_typed">Google Assistant Enabled. </string>
    <string name="intro_open_source_typed">Open Source. 100% Kotlin. </string>
    <string name="intro_share_typed">Create. Share. Motivate. </string>
    <string name="app_name_splash" translatable="false">Yet Another Music Player! Just Another Music Player!
        Yet Another Music Player! One More Music Player! Just Music Player! Yet Another Music Player!
        Yet Another Music Player! Just Another Music Player! Yet Another Music Player!
        One More Music Player! Just Music Player! Yet Music Player! Yet Another Music Player!
        Just Another Music Player! Yet Another Music Player! One More Music Player!
        Just Music Player! Yet Music Player! Yet Another Music Player! Just Another Music Player!
        Yet Another Music Player! One More Music Player! Just Music Player! Yet Another Music Player!
        Yet Another Music Player! Just Another Music Player! Yet Another Music Player!
        One More Music Player! Just Music Player! Yet Music Player! Yet Another Music Player!
        Just Another Music Player! Yet Another Music Player! One More Music Player!
        Just Music Player! Yet Music Player! Yet Another Music Player! Just Another Music Player!
        Yet Another Music Player! One More Music Player! Just Music Player! Yet Another Music Player!
        Yet Another Music Player! Just Another Music Player! Yet Another Music Player!
        One More Music Player! Just Music Player! Yet Music Player! Yet Another Music Player!
        Just Another Music Player! Yet Another Music Player! One More Music Player!
        Just Music Player! Yet Music Player! Yet Another Music Player! Just Another Music Player!
        Yet Another Music Player! One More Music Player! Just Music Player! Yet Another Music Player!
        Yet Another Music Player! Just Another Music Player! Yet Another Music Player!
        One More Music Player! Just Music Player! Yet Music Player! Yet Another Music Player!
        Just Another Music Player! Yet Another Music Player! One More Music Player!
        Just Music Player! Yet Music Player! Yet Another Music Player! Just Another Music Player!
        Yet Another Music Player! One More Music Player! Just Music Player! Yet Another Music Player!
        Yet Another Music Player! Just Another Music Player! Yet Another Music Player!
        One More Music Player! Just Music Player! Yet Music Player! Yet Another Music Player!
        Just Another Music Player! Yet Another Music Player! One More Music Player!
        Just Music Player! Yet Music Player! Yet Another Music Player! Just Another Music Player!
        Yet Another Music Player! One More Music Player! Just Music Player! Yet Another Music Player!
        Yet Another Music Player! Just Another Music Player! Yet Another Music Player!
        One More Music Player! Just Music Player! Yet Music Player! Yet Another Music Player!
        Just Another Music Player! Yet Another Music Player! One More Music Player!
        Just Music Player! Yet Music Player! Yet Another Music Player! Just Another Music Player!
        Yet Another Music Player! One More Music Player! Just Music Player! Yet Another Music Player!
        Yet Another Music Player! Just Another Music Player! Yet Another Music Player!
        One More Music Player! Just Music Player! Yet Music Player! Yet Another Music Player!
        Just Another Music Player! Yet Another Music Player! One More Music Player!
        Yet Music Player! Yet Another Music Player! Just Another Music Player!
        Yet Another Music Player! One More Music Player! Just Music Player! Yet Another Music Player!
        Yet Another Music Player! Just Another Music Player! Just Another Music Player!
        Yet Another Music Player! One More Music Player! Just Music Player! Yet Another Music Player!
        Yet Another Music Player! Just Another Music Player! Yet Another Music Player!
        One More Music Player! Yet Music Player! Yet Another Music Player! Yet Another Music Player!
        Just Another Music Player! Yet Another Music Player! One More Music Player!
        Just Music Player! Yet Music Player! Yet Another Music Player! Just Another Music Player!
        Yet Another Music Player! One More Music Player! Just Music Player! Yet Another Music Player!
        Yet Another Music Player! Just Another Music Player! Yet Another Music Player!
        One More Music Player! Just Music Player! Yet Music Player! Yet Another Music Player!
        Just Another Music Player! Yet Another Music Player! One More Music Player! Just Music Player!
        Yet Another Music Player! Yet Another Music Player! Just Another Music Player!
        Yet Another Music Player! One More Music Player! Just Music Player! Yet Music Player!
        Yet Another Music Player! Just Another Music Player! Yet Another Music Player! One More Music Player!
        Just Music Player! Yet Music Player! Yet Another Music Player! Just Another Music Player!
        Yet Another Music Player! One More Music Player! Just Music Player! Yet Another Music Player!
        Yet Another Music Player! Just Another Music Player! Yet Another Music Player!
        Yet Another Music Player! Yet Another Music Player! Just Another Music Player!
        Yet Another Music Player! One More Music Player! Just Music Player! Yet Music Player!
        Yet Another Music Player! Just Another Music Player! Yet Another Music Player! One More Music Player!
        Just Music Player! Yet Music Player! Yet Another Music Player! Just Another Music Player!
        Yet Another Music Player! One More Music Player! Just Music Player! Yet Another Music Player!
        Yet Another Music Player! Just Another Music Player! Yet Another Music Player!
        Yet Another Music Player! Yet Another Music Player! Just Another Music Player!
        Yet Another Music Player! One More Music Player! Just Music Player! Yet Music Player!
        Yet Another Music Player! Just Another Music Player! Yet Another Music Player! One More Music Player!
        Just Music Player! Yet Music Player! Yet Another Music Player! Just Another Music Player!
        Yet Another Music Player! One More Music Player! Just Music Player! Yet Another Music Player!
        Yet Another Music Player! Just Another Music Player! Yet Another Music Player!
        Yet Another Music Player! Yet Another Music Player! Just Another Music Player!
        Yet Another Music Player! One More Music Player! Just Music Player! Yet Music Player!
        Yet Another Music Player! Just Another Music Player! Yet Another Music Player! One More Music Player!
        Just Music Player! Yet Music Player! Yet Another Music Player! Just Another Music Player!
        Yet Another Music Player! One More Music Player! Just Music Player! Yet Another Music Player!
        Yet Another Music Player! Just Another Music Player! Yet Another Music Player!
        Yet Another Music Player! Yet Another Music Player! Just Another Music Player!
        Yet Another Music Player! One More Music Player! Just Music Player! Yet Music Player!
        Yet Another Music Player! Just Another Music Player! Yet Another Music Player! One More Music Player!
        Just Music Player! Yet Music Player! Yet Another Music Player! Just Another Music Player!
        Yet Another Music Player! One More Music Player! Just Music Player! Yet Another Music Player!
        Yet Another Music Player! Just Another Music Player! Yet Another Music Player!
        Just Another Music Player!</string>
    <string name="permissions_rationale">This permission is required to access the media on your phone.</string>
    <string name="okay">Okay</string>
    <string name="error_sdcard">Oops. Something went wrong while fetching tracks from SD Card.</string>
    <string name="albums">Albums</string>
    <string name="tracks">Tracks</string>
    <string name="up_next">Up Next</string>
    <string name="album_art">Album Art</string>
    <string name="play_action">Play Action</string>
    <string name="shuffle_action">Shuffle Action</string>
    <string name="repeat_action">Repeat Action</string>
    <string name="prev_action">Previous Action</string>
    <string name="next_action">Next Action</string>
    <string name="pause_action">Pause Action</string>
    <string name="now_playing">Now Playing</string>
    <string name="now_playing_indicator">Now Playing Indicator</string>
    <string name="now_playing_track_subtitle">%1$s - %2$s</string>
    <string name="empty_library">empty library</string>
    <string name="empty_library_info">Fill up some tracks in your phone to see them here.</string>
    <string name="empty_search_info">Search for your favorite songs</string>
    <string name="shuffle_all">Shuffle All</string>
    <string name="by_artist">by %s</string>
    <string name="drag_handle">Drag Handle</string>
    <string name="search_hint">Search Songs</string>
    <string name="no_results_found">No Results Found</string>
    <string name="settings">Settings</string>
    <string name="pref_feedback_summary">Tell us what you think about the app</string>
    <string name="pref_feedback_title">Feedback</string>
    <string name="pref_say_thanks_title">Say Thanks</string>
    <string name="pref_say_thanks_summary">Rate the app on Play Store</string>
    <string name="pref_licenses_title">Licenses</string>
    <string name="pref_about_title">About Yamp!</string>
    <string name="pref_about_summary">Yet Another Music Player (Yamp) is an open source Music Player built in 100% Kotlin to showcase the usage of Exo Player for music playback.</string>
    <string name="pref_contribute_title">Contribute</string>
    <string name="pref_contribute_summary">Check out, Star or Fork the Github repo of Yamp, an open source Music Player.</string>
    <string name="pref_version_title">Version</string>
    <string name="pref_version_summary">Yamp! v1.0</string>
    <string name="pref_policy_title">Terms and Privacy Policy</string>
    <string name="settings_icon">Settings Icon</string>
    <string name="play_next">Play Next</string>
    <string name="add_to_queue">Add to Queue</string>
    <string name="github_logo">Github Logo</string>
    <string name="next_arrow">Next Arrow</string>
    <string name="contribute_to_open_source">Contribute to Open Source</string>
    <string name="google_assistant_logo">Google Assistant Logo</string>
    <string name="control_with_assistant">Control With Assistant</string>
    <string name="play_local_music">Play Local Music</string>
    <string name="music_library_logo">Music Library Logo</string>
    <string name="walkthrough_background_image">WalkThrough Background Image</string>
    <string name="go_to_library">Go to Library</string>
</resources>
