<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
            android:key="feedback"
            android:summary="@string/pref_feedback_summary"
            android:title="@string/pref_feedback_title"
            app:iconSpaceReserved="false">
        <intent
                android:action="android.intent.action.VIEW"
                android:data="mailto:iamporus@gmail.com">
            <extra
                    android:name="android.intent.extra.SUBJECT"
                    android:value="Yamp - Feedback" />
            <extra
                    android:name="android.intent.extra.TEXT"
                    android:value="Yamp is a very good music player app BUT... " />
        </intent>
    </Preference>

    <Preference
            android:key="say_thanks"
            android:summary="@string/pref_say_thanks_summary"
            android:title="@string/pref_say_thanks_title"
            app:iconSpaceReserved="false">
        <intent
                android:action="android.intent.action.VIEW"
                android:data="market://details?id=com.prush.justanotherplayer" />
    </Preference>

    <Preference
            android:key="licenses"
            android:title="@string/pref_licenses_title"
            app:iconSpaceReserved="false" />


    <Preference
            android:key="about"
            android:summary="@string/pref_about_summary"
            android:title="@string/pref_about_title"
            app:iconSpaceReserved="false" >
        <intent android:action="com.prush.justanotherplayer.activities.WalkThroughActivity"/>
    </Preference>


    <Preference
            android:key="contribute"
            android:summary="@string/pref_contribute_summary"
            android:title="@string/pref_contribute_title"
            app:iconSpaceReserved="false">
        <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/iamporus/JustAnotherPlayer" />
    </Preference>


    <Preference
        android:key="privacyPolicy"
        android:title="@string/pref_policy_title"
        app:iconSpaceReserved="false" />

    <Preference
            android:key="version"
            android:summary="@string/pref_version_summary"
            android:title="@string/pref_version_title"
            app:iconSpaceReserved="false" />

</PreferenceScreen>