<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/darker_scrim"
        android:padding="16dp"
        app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

    <ImageView
            android:id="@+id/rowArtImageView"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_margin="8dp"
            android:contentDescription="@string/album_art"
            app:layout_constraintBottom_toBottomOf="@+id/rowSubtitleTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

    <TextView
            android:id="@+id/rowTitleTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:clipToPadding="false"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:textColor="?android:textColorPrimary"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/rowArtImageView"
            app:layout_constraintTop_toTopOf="parent" />

    <TextView
            android:id="@+id/rowSubtitleTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:clipToPadding="false"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:textColor="?android:textColorSecondary"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/rowArtImageView"
            app:layout_constraintTop_toBottomOf="@+id/rowTitleTextView" />

    <TextView
            android:id="@+id/playNextAction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/queue_selector_ripple"
            android:drawableStart="@drawable/ic_playlist_add"
            android:drawableLeft="@drawable/ic_playlist_add"
            android:drawablePadding="16dp"
            android:gravity="start|center_vertical"
            android:padding="8dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/play_next"
            app:layout_constraintTop_toBottomOf="@+id/rowArtImageView" />

    <TextView
            android:id="@+id/addToQueueAction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:clickable="true"
            android:focusable="true"
            android:background="@drawable/queue_selector_ripple"
            android:drawableStart="@drawable/ic_playlist_add"
            android:drawableLeft="@drawable/ic_playlist_add"
            android:drawablePadding="16dp"
            android:gravity="start|center_vertical"
            android:padding="8dp"
            android:text="@string/add_to_queue"
            app:layout_constraintTop_toBottomOf="@+id/playNextAction" />


</androidx.constraintlayout.widget.ConstraintLayout>